--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="./assets/css/styles.css">
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"> -->
   <title>Frontend Mentor | News homepage</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -15,46 +16,104 @@
   </style>
 </head>
 <body>
+  <div class="grid-container">
 
-  Home
-  New
-  Popular
-  Trending
-  Categories
+    <div class="header">
 
-  The Bright Future of Web 3.0?
+      <div class="logo">W.</div>
 
-  We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
-  But is it really fulfilling its promise?
+      <div class="menu">
+        <span class="span-menu"><a href="">Home</a></span>
+        <span class="span-menu"><a href="">New</a></span>
+        <span class="span-menu"><a href="">Popular</a></span>
+        <span class="span-menu"><a href="">Trending</a></span>
+        <span class="span-menu"><a href="">Categories</a></span>
+      </div>
 
-  Read more
+    </div>
 
-  New 
+    <div class="sidebar">
 
-  Hydrogen VS Electric Cars
-  Will hydrogen-fueled cars ever catch up to EVs?
+      <div class="sidebar-1">
+        <div class="image-1"><img src="./assets/images/image-web-3-desktop.jpg" alt=""></div>
+      </div>
+        <div class="sidebar-2">
+            <div class="flex flex-gauche">The Bright Future of Web 3.0?</div>
+            <div class="flex flex-droite">
+              We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
+              But is it really fulfilling its promise?
 
-  The Downsides of AI Artistry
-  What are the possible adverse effects of on-demand AI image generation?
+              <div>
+                <button class="button">R E A D <span class="black">_</span> M O R E</button>
+              </div>
+            </div>
+        </div>
 
-  Is VC Funding Drying Up?
-  Private funding by VC firms is down 50% YOY. We take a look at what that means.
+    </div>
 
-  01
-  Reviving Retro PCs
-  What happens when old PCs are given modern upgrades?
+    <div class="main">
 
-  02
-  Top 10 Laptops of 2022
-  Our best picks for various needs and budgets.
+      <div class="main-paragraphe">
+        <span class="titre">New</span> 
 
-  03
-  The Growth of Gaming
-  How the pandemic has sparked fresh opportunities.
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+          <div class="paragraphe p-1">
+            Hydrogen VS Electric Cars
+            <div class="span-paragraphe">Will hydrogen-fueled cars ever catch up to EVs?</div>
+          </div>
+      </div>
+
+      <div class="main-paragraphe">
+        <div class="titre-2">The Downsides of AI Artistry</div>
+
+        <div class="paragraphe">
+          <div class="span-paragraphe">What are the possible adverse effects of on-demand AI image generation?</div>
+        </div>
+      </div>
+
+      <div class="main-paragraphe">
+        <div class="paragraphe">
+          Is VC Funding Drying Up?
+          <div class="span-paragraphe">
+          Private funding by VC firms is down 50% YOY. We take a look at what that means.
+          </div>
+        </div>
+      </div>
+
+    </div>
+    <!-- <div class="footer">
+      <div class="image image-2">
+        <div class="footer-gauche"><img src="./assets/images/image-gaming-growth.jpg" alt=""></div>
+        <div class="footer-droite">
+          <div class="num">01</div>
+          <div class="type">Reviving Retro PCs</div>
+          <div class="description">What happens when old PCs are given modern upgrades?</div>
+        </div>
+      </div>
+
+      <div class="image image-3">
+        <div class="footer-gauche"><img src="./assets/images/image-gaming-growth.jpg" alt=""></div>
+        <div class="footer-droite">
+          <div class="num">02</div>
+          <div class="type">Top 10 Laptops of 2022</div>
+          <div class="description">Our best picks for various needs and budgets.</div>
+        </div>
+      </div>
+
+      <div class="image image-4">
+        <div class="footer-gauche"><img src="./assets/images/image-gaming-growth.jpg" alt=""></div>
+        <div class="footer-droite">
+          <div class="num">03</div>
+          <div class="type">The Growth of Gaming</div>
+          <div class="description">How the pandemic has sparked fresh opportunities.</div>
+        </div>
+      </div>
+
+      </div>
+      <div class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+        Coded by <a href="#">Onjatiana Léoncia RASOARIVELO</a>.
+      </div>
+    </div> -->
+
 </body>
 </html>
