--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <link rel="stylesheet" href="./assets/css/styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;400;700;800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
  <title>Frontend Mentor | News homepage</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -18,6 +19,7 @@
 <body>
 
   <div class="header">
+
     <div class="logo">W.</div>
 
     <div class="menu">
@@ -124,5 +126,6 @@
   >. Coded by <a href="#">Onjatiana Léoncia RASOARIVELO</a>.
 </div>
 
+<script src="script.js"></script>
 </body>
 </html>
